# bazel-ebook

./: .bazelignore  .bazelrc  .gitignore  AUTHORS  BUILD.bazel  GEMINI.md  MODULE.bazel  Makefile  README.md  SConstruct  WORKSPACE  asy_to_png.sh  book.ch001.md  book.ch002.md  epub-metadata.xml  extensions.bzl  gazelle_python.yaml  multitool.lock.json  requirements.in  requirements_lock.txt  rules.bzl
.bcr/: metadata.template.json
.github/workflows/: build.yml  publish-my-bcr.yml  publish-official-bcr.yml  publish.yml  release-1.yml  release-gh-pages.yml  release-gh-sources.yml  release-sources.yml  release.yml  tag-and-release.yml
ai/: AI_BCR.md  AI_GIT.md
doc/: 01-introduction.md  BUILD.bazel
docker/: Dockerfile  Makefile
ebook-example/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  book.ch001.md  book.ch004.md
ebook-example/include-files/: BUILD.bazel  file1.md
images/: BUILD.bazel  test2.asy
integration/: BUILD.bazel  MODULE.bazel  WORKSPACE  book.ch002.md  filegroup_test.md  test.bash
integration/images/: BUILD.bazel  book.ch003.md  test1.asy
integration/subdir/: BUILD.bazel  book.ch001.md  epub-metadata.xml  title.yaml
subdir/: BUILD.bazel
tests/: BUILD.bazel  book.ch003.md  dot_png_test.md  drawtiming.t  drawtiming_lib_test.md  plantuml_test.md  sequence_diagram.txt
tests/include-files/: BUILD.bazel  file1.md  file2.md
tools/: BUILD.bazel
