# Copyright (C) 2020 Google Inc.
#
# This file has been licensed under Apache 2.0 license.  Please see the LICENSE
# file at the root of the repository.

load("//build:rules.bzl",
    "markdown_lib",
    "pandoc_chunked_html",
     "ebook_pdf",
)

markdown_lib(
    name = "manual_src",
    srcs = [
        "empty.md", # This shouldn't be happening.
        "//doc:md",
        "README.md",
        "//tests:plantuml_lib_test",
        "//tests:md",
        "//tests:dot_png_test",
        "//tests:drawtiming_lib_test",
        "//tests/include-files:md",
    ],
    additional_inputs = [
        "//tests/include-files:md2",
    ],
)

pandoc_chunked_html(
    name = "bazel_ebook_html",
    deps = [
        ":manual_src",
    ],
    toc = True,
    title = "Bazel Ebook Ebook",
    filters = [
        #"@pandoc_crossref//:pandoc_crossref",
    ],
)

ebook_pdf(
  name = "bazel_ebook_pdf",
  deps = [":manual_src"],
  metadata_xml = "empty.xml",
  title_yaml = "empty.yaml",
)
