module(
    name = "bazel_ebook",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(
    name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "bazel_bats", version = "0.38.9")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "bazel_rules_bid", version = "1.2.4")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
#bazel_dep(name = "platforms", version = "1.0.0")
#bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.0")


bazel_rules_bid_extension = use_extension(
    "@bazel_rules_bid//:extensions.bzl", "bazel_rules_bid_extension")
use_repo(bazel_rules_bid_extension, "gotopt2")


bazel_ebook_extension = use_extension(
    "//:extensions.bzl", "bazel_ebook_extension")
use_repo(
    bazel_ebook_extension,
    "pandoc_crossref",
    # TODO: This should be removed.
    "pandoc_ext_include_files",
    "pandoc_include",
)


bazel_dep(name = "rules_python", version = "1.8.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")


bazel_dep(name = "rules_multitool", version = "1.11.1")
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

