load(
    "@bazel_ebook//build:rules.bzl",
    "asymptote",
    "ebook_epub",
    "ebook_kindle",
    "ebook_pdf",
    "markdown_lib",
    "pandoc_chunked_html",
    "pandoc_standalone_html",
)
load("@rules_pkg//:pkg.bzl", "pkg_zip")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

asymptote(
    name = "test",
    srcs = ["test.asy"],
    deps = ["//images:test2"],
)

filegroup(
    name = "test_filegroup",
    srcs = ["filegroup_test.md"],
)

markdown_lib(
    name = "md",
    srcs = [
        "book.ch001.md",
        "book.ch002.md",
        "book.ch004.md",
        ":test_filegroup",
        "//images:md",
    ],
    deps = [
        ":test",
        "//images:dot",
    ],
)

ebook_epub(
    name = "book_epub",
    metadata_xml = "epub-metadata.xml",
    title_yaml = "title.yaml",
    deps = [":md"],
)

ebook_pdf(
    name = "book_pdf",
    metadata_xml = "epub-metadata.xml",
    title_yaml = "title.yaml",
    toc = True,
    deps = [":md"],
)

ebook_kindle(
    name = "book_kindle",
    metadata_xml = "epub-metadata.xml",
    title_yaml = "title.yaml",
    deps = [":md"],
)

pandoc_standalone_html(
    name = "html",
    args = [
        "--katex=https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/",
    ],
    title = "This is a test title",
    toc = True,
    deps = [
        ":md",
    ],
)

# This packages the files, but ignores the dir paths, which are important.
pkg_zip(
    name = "zip",
    srcs = [
        ":html",
    ],
)

pandoc_chunked_html(
    name = "html_chunked",
    args = [
        "--katex=https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/",
    ],
    filters = [
        "@pandoc_crossref//:pandoc_crossref",
        #"@bazel_ebook//third_party/pandoc-include:filter",
        #"@pandoc_ext_include_files//:filter",
    ],
    #title = "This is a test title",
    toc = True,
    deps = [
        ":md",
    ],
)

# This packages the files, but ignores the dir paths, which are important.
pkg_zip(
    name = "ebook_zip",
    srcs = [
        ":html_chunked",
    ],
    strip_prefix = "html_chunked.d",
)

sh_test(
    name = "test_bash",
    size = "small",
    srcs = ["test.bash"],
)
