module(
    name = "bazel_ebook_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "bazel_rules_bid", version = "1.2.4")
bazel_dep(name = "bazel_ebook", version = "0.0.5")


local_path_override(
    module_name = "bazel_ebook",
    path = "../",
)


bazel_rules_bid_extension = use_extension(
    "@bazel_rules_bid//:extensions.bzl", "bazel_rules_bid_extension")
use_repo(bazel_rules_bid_extension, "gotopt2")

bazel_ebook_extension = use_extension(
    "@bazel_ebook//:extensions.bzl", "bazel_ebook_extension")
use_repo(
    bazel_ebook_extension,
    "pandoc_crossref", "pandoc_ext_include_files")

