load(
    "@bazel_ebook//build:rules.bzl",
    "asymptote",
    "ebook_epub",
    "ebook_kindle",
    "ebook_pdf",
    "markdown_lib",
    "pandoc_chunked_html",
    "pandoc_standalone_html",
)
load("@rules_pkg//:pkg.bzl", "pkg_zip")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

markdown_lib(
    name = "md",
    srcs = [
        "book.ch001.md",
    ],
)

ebook_pdf(
    name = "book_pdf",
    metadata_xml = "epub-metadata.xml",
    title_yaml = "title.yaml",
    deps = [":md"],
)
